test_regress/t/t_inst_recurse2_bad.out
%Error: t/t_inst_recurse2_bad.v:18:8: Unsupported: Identically recursive module (module instantiates itself, without changing parameters): 'looped'
                                    : ... In instance t.looped.looped
module looped ( );
       ^~~~~~
%Error: Exiting due to
